--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "src/put-selector"]
 	path = src/put-selector
 	url = https://github.com/kriszyp/put-selector.git
+[submodule "src/xstyle"]
+	path = src/xstyle
+	url = https://github.com/kriszyp/xstyle.git
